--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,14 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
-                    <img src="images/cart.png" class="cart" alt="cart">
-                    <img src="images/menu.png" class="menu-icon" alt="menu">
+                    <img src="./images/cart.png" class="cart" alt="cart">
+                    <img src="./images/menu.png" class="menu-icon" alt="menu">
                 </div>
             </div>
         </div>
     </header>
     <video autoplay muted loop id="video-background">
-        <source src="images/production_id_4835993.mp4" type="video/mp4">
+        <source src="./images/production_id_4835993.mp4" type="video/mp4">
     </video>
    
     <section class="contact">
@@ -77,13 +77,13 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phones.</p>
                     <div class="app-logo">
-                        <img src="images/play-store.png" alt="logo">
-                        <img src="images/app-store.png" alt="logo">
+                        <img src="./images/play-store.png" alt="logo">
+                        <img src="./images/app-store.png" alt="logo">
                     </div>
                 </div>
       
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png" alt="logo">   
+                    <img src="./images/logo-white.png" alt="logo">   
                     <p>Our purpose is to Sustainably make the Pleasure and Benifits of Sports Accessible to the Many.</p>
                 </div>
       
