--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     
             <div class="navbar">
                 <div class="logo">
-                    <img src="./images/logo.png" alt="logo">
+                    <img src="./Images/logo.png" alt="logo">
                 </div>
                 <nav>
                     <ul>
@@ -28,8 +28,8 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-                <img src="./images/cart.png" class="cart" alt="cart logo"> 
-                <img src="./images/menu.png" class="menu-icon" alt="menu logo">
+                <img src="./Images/cart.png" class="cart" alt="cart logo"> 
+                <img src="./Images/menu.png" class="menu-icon" alt="menu logo">
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
 
         
     <video autoplay muted loop id="video-background">
-        <source src="./images/ink_-_67358.mp4" type="video/mp4">
+        <source src="./Images/ink_-_67358.mp4" type="video/mp4">
     </video>
     <section class="hero-section">
       <div class="hero">
@@ -54,7 +54,7 @@
         </div>
       </div> 
       <div class="img">
-        <img src="./images/logo-white.png" alt="hero image" >
+        <img src="./Images/logo-white.png" alt="hero image" >
       </div>
     </section>
 
@@ -65,13 +65,13 @@
     <section class="meet-the-team">
         <h2 class="mtt">Meet the Team</h2>
         <div class="team-member">
-            <img src="./images/user-3.png" alt="Team Member 1">
+            <img src="./Images/user-3.png" alt="Team Member 1">
             <h3>Ada Lovelace</h3>
             <p>Software Engineer</p>
             <p>Ada Lovelace is a skilled software engineer with a decade of experience in designing and implementing robust software systems.</p>
         </div>
         <div class="team-member">
-            <img src="./images/user-1.png" alt="Team Member 2">
+            <img src="./Images/user-1.png" alt="Team Member 2">
             <h3> Cathy Pearl </h3>
             <p>UI/UX Designer</p>
             <p> Cathy Pearl  is a highly creative UI/UX designer with a diverse portfolio that spans various industries, including fashion and technology.</p>
@@ -85,13 +85,13 @@
               <h3>Download Our App</h3>
               <p>Download App for Android and ios mobile phones.</p>
               <div class="app-logo">
-                  <img src="./images/play-store.png" alt="playstore logo">
-                  <img src="./images/app-store.png" alt="app store logo">
+                  <img src="./Images/play-store.png" alt="playstore logo">
+                  <img src="./Images/app-store.png" alt="app store logo">
               </div>
           </div>
 
           <div class="footer-col-2">
-              <img src="./images/logo-white.png" alt="logo">   
+              <img src="./Images/logo-white.png" alt="logo">   
               <p>Our purpose is to Sustainably make the Pleasure and Benifits of Sports Accessible to the Many.</p>
           </div>
 
