--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="navbar">
                     <div class="logo">
-                        <img src="./images/logo.png" alt="logo">
+                        <img src="./Images/logo.png" alt="logo">
                     </div>
                     <nav>
                         <ul>
@@ -28,8 +28,8 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
-                    <img src="./images/cart.png" class="cart" alt="cart">
-                    <img src="./images/menu.png" class="menu-icon" alt="menu icon">
+                    <img src="./Images/cart.png" class="cart" alt="cart">
+                    <img src="./Images/menu.png" class="menu-icon" alt="menu icon">
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
             <div class="small-container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="./images/exclusive2.png" class="offer-img" alt="exclusice image">
+                        <img src="./Images/exclusive2.png" class="offer-img" alt="exclusice image">
                     </div>
         
                     <div class="col-2">
@@ -62,25 +62,25 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <img src="./images/product-2.jpg" alt="product img">
+            <img src="./Images/product-2.jpg" alt="product img">
             <h4>NIKE AIR FORCE 1</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-2.jpg" alt="product img">
+            <img src="./Images/product-2.jpg" alt="product img">
             <h4>SKECHERS 23</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-2.jpg" alt="product img">
+            <img src="./Images/product-2.jpg" alt="product img">
             <h4>ADIDAS III</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-2.jpg" alt="product img">
+            <img src="./Images/product-2.jpg" alt="product img">
             <h4>NIKE ORIGINALS</h4>
             <p>$50.00</p>
         </div>
@@ -89,50 +89,50 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="./images/product-5.jpg" alt="product img">
+            <img src="./Images/product-5.jpg" alt="product img">
             <h4>SKECHERS</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-5.jpg" alt="product img">
+            <img src="./Images/product-5.jpg" alt="product img">
             <h4>ADIDAS III</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-5.jpg" alt="product img">
+            <img src="./Images/product-5.jpg" alt="product img">
             <h4>SKECHERS</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-5.jpg" alt="product img">
+            <img src="./Images/product-5.jpg" alt="product img">
             <h4>NIKE ORIGINALS</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-10.jpg" alt="product img">
+            <img src="./Images/product-10.jpg" alt="product img">
             <h4>Converse Latest</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-10.jpg" alt="product img">
+            <img src="./Images/product-10.jpg" alt="product img">
             <div class="text"><h4>SKECHERS</h4>
             <p>$50.00</p>
         </div>
     </div>
 
         <div class="col-4">
-            <img src="./images/product-10.jpg" alt="product img">
+            <img src="./Images/product-10.jpg" alt="product img">
             <h4>Converse Latest</h4>
             <p>$50.00</p>
         </div>
 
         <div class="col-4">
-            <img src="./images/product-10.jpg" alt="product img">
+            <img src="./Images/product-10.jpg" alt="product img">
             <h4>NIKE AIR FORCE 1</h4>
             <p>$50.00</p>
         </div>
@@ -150,13 +150,13 @@
                 <h3>Download Our App</h3>
                 <p>Download App for Android and ios mobile phones.</p>
                 <div class="app-logo">
-                    <img src="./images/play-store.png" alt="playstore logo">
-                    <img src="./images/app-store.png" alt="appstore logo">
+                    <img src="./Images/play-store.png" alt="playstore logo">
+                    <img src="./Images/app-store.png" alt="appstore logo">
                 </div>
             </div>
 
             <div class="footer-col-2">
-                <img src="./images/logo-white.png" alt="logo">   
+                <img src="./Images/logo-white.png" alt="logo">   
                 <p>Walking with Style: Bringing Fashion and Comfort to Every Step.</p>
             </div>
 
